# Kaiskell

./: .gitignore  CHANGELOG.md  Kaiskell.cabal  LICENSE
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.8/: Kaiskell-0.1.0.0-inplace.conf  package.cache
src/: Evaluator.hs
src/Game/: Actions.hs  Core.hs  Round.hs  Scoring.hs  Validation.hs
src/Models/: Bids.hs  Cards.hs  Constants.hs  Players.hs  State.hs  Team.hs
src/Utils/: Shuffle.hs
